Fix spacing, font-weight and change button style

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,14 @@
-// .app {
-//     &__container {
-//         width: 90%;
-//     }
-// }
+.app {
+    &__container {
+        width: 90%;
+        border: solid 1px #D1E8E2;
+        background-color: #eef2fa;
+        border-radius: 10px;
+    }
+    // &__rounded_border {
+    //     border-top-left-radius: 10px;
+    //     border-top-right-radius: 10px;
+    //     border-bottom-left-radius:  10px;
+    //     border-bottom-right-radius:  10px;
+    // }
+}
